@@ -294,6 +294,7 @@
       -XX:+IgnoreUnrecognizedVMOptions
       --add-opens=java.base/java.lang=ALL-UNNAMED
       --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
       --add-opens=java.base/java.io=ALL-UNNAMED
       --add-opens=java.base/java.net=ALL-UNNAMED
       --add-opens=java.base/java.nio=ALL-UNNAMED
